sdk/include/geniex.h


typedef enum {
    GENIEX_SUCCESS = 0, 
    GENIEX_ERROR_COMMON_UNKNOWN             = -100000, 
    GENIEX_ERROR_COMMON_INVALID_INPUT       = -100001, 
    GENIEX_ERROR_COMMON_INVALID_DEVICE      = -100002, 
    GENIEX_ERROR_COMMON_MEMORY_ALLOCATION   = -100003, 
    GENIEX_ERROR_COMMON_FILE_NOT_FOUND      = -100004, 
    GENIEX_ERROR_COMMON_NETWORK             = -100005, 
    GENIEX_ERROR_COMMON_CANCELLED           = -100006, 
    GENIEX_ERROR_COMMON_NOT_INITIALIZED     = -100007, 
    GENIEX_ERROR_COMMON_ALREADY_INITIALIZED = -100008, 
    GENIEX_ERROR_COMMON_AUTH                = -100009, 
    GENIEX_ERROR_COMMON_HUB_MODEL_NOT_FOUND = -100010, 
    GENIEX_ERROR_COMMON_RATE_LIMITED        = -100011, 
    GENIEX_ERROR_COMMON_HUB_SERVER          = -100012, 
    GENIEX_ERROR_COMMON_NOT_SUPPORTED       = -100013, 
    GENIEX_ERROR_COMMON_MANIFEST_PARSE      = -100014, 
    GENIEX_ERROR_COMMON_CHIPSET_UNAVAILABLE = -100015, 
    GENIEX_ERROR_COMMON_PARAM_NOT_SUPPORTED = -100016, 
    GENIEX_ERROR_COMMON_INSUFFICIENT_DISK_SPACE = -100017, 
    GENIEX_ERROR_COMMON_MODEL_LOAD    = -100201, 
    GENIEX_ERROR_COMMON_MODEL_INVALID = -100203, 
    GENIEX_ERROR_COMMON_PLUGIN_LOAD    = -100301, 
    GENIEX_ERROR_COMMON_PLUGIN_INVALID = -100302, 
    GENIEX_ERROR_LLM_TOKENIZATION_FAILED         = -200001, 
    GENIEX_ERROR_LLM_TOKENIZATION_CONTEXT_LENGTH = -200004, 
    GENIEX_ERROR_LLM_GENERATION_FAILED          = -200101, 
    GENIEX_ERROR_LLM_GENERATION_PROMPT_TOO_LONG = -200103, 
    GENIEX_ERROR_VLM_IMAGE_LOAD   = -201001, 
    GENIEX_ERROR_VLM_IMAGE_FORMAT = -201002, 
    GENIEX_ERROR_VLM_AUDIO_LOAD   = -201101, 
    GENIEX_ERROR_VLM_AUDIO_FORMAT = -201102, 
    GENIEX_ERROR_VLM_GENERATION_FAILED   = -201201, 
    GENIEX_ERROR_VLM_PREFIX_REUSE_FAILED = -201202, 
} geniex_ErrorCode;
typedef const char* geniex_PluginId;
typedef const char* geniex_Path;
typedef enum {
    GENIEX_POWER_MODE_LOW_POWER_SAVER            = 0,
    GENIEX_POWER_MODE_POWER_SAVER                = 1,
    GENIEX_POWER_MODE_HIGH_POWER_SAVER           = 2,
    GENIEX_POWER_MODE_LOW_BALANCED               = 3,
    GENIEX_POWER_MODE_BALANCED                   = 4,
    GENIEX_POWER_MODE_HIGH_PERFORMANCE           = 5,
    GENIEX_POWER_MODE_SUSTAINED_HIGH_PERFORMANCE = 6,
    GENIEX_POWER_MODE_BURST                      = 7
} geniex_PowerMode;
typedef bool (*geniex_token_callback)(const char* token, void* user_data);
typedef struct {
    geniex_Path path; 
} geniex_KvCacheSaveInput;
typedef struct {
    void* reserved; 
} geniex_KvCacheSaveOutput;
typedef struct {
    geniex_Path path; 
} geniex_KvCacheLoadInput;
typedef struct {
    void* reserved; 
} geniex_KvCacheLoadOutput;
GENIEX_API void geniex_free(void* ptr);
typedef struct {
    geniex_PluginId* plugin_ids;   
    int32_t          plugin_count; 
} geniex_GetPluginListOutput;
typedef struct {
    geniex_PluginId plugin_id; 
} geniex_GetDeviceListInput;
typedef struct {
    const char** device_ids;   
    const char** device_names; 
    int32_t      device_count; 
} geniex_GetDeviceListOutput;
typedef struct {
    geniex_PluginId plugin_id;   
    const char*     model_name;  
    const char*     mode;        
    int32_t         ngl_default; 
} geniex_ResolveDeviceInput;
typedef struct {
    char*   device_id; 
    int32_t ngl;       
    char*   warning;   
} geniex_ResolveDeviceOutput;
typedef struct {
    int64_t ttft;        
    int64_t media_time;  
    int64_t prompt_time; 
    int64_t decode_time; 
    int64_t prompt_tokens;    
    int64_t generated_tokens; 
    double prefill_speed;  
    double decoding_speed; 
    int64_t draft_n_total;    
    int64_t draft_n_accepted; 
    const char* stop_reason; 
} geniex_ProfileData;
typedef struct {
    const char* id;        
    const char* name;      
    const char* arguments; 
} geniex_ToolCall;
typedef struct {
    float       temperature;        
    float       top_p;              
    int32_t     top_k;              
    float       min_p;              
    float       repetition_penalty; 
    float       presence_penalty;   
    float       frequency_penalty;  
    int32_t     seed;               
    geniex_Path grammar_path;       
    const char* grammar_string;     
} geniex_SamplerConfig;
typedef struct {
    int32_t               max_tokens;     
    const char**          stop;           
    int32_t               stop_count;     
    geniex_SamplerConfig* sampler_config; 
    geniex_Path* image_paths; 
    int32_t      image_count; 
    geniex_Path* audio_paths; 
    int32_t      audio_count; 
    bool    sliding_window;
    int32_t sliding_window_n_keep; 
} geniex_GenerationConfig;
typedef struct {
    int32_t n_ctx;            
    int32_t n_threads;        
    int32_t n_threads_batch;  
    int32_t n_batch;          
    int32_t n_ubatch;         
    int32_t n_seq_max;        
    int32_t n_gpu_layers;     
    geniex_Path chat_template_path;     
    const char* chat_template_content;  
    const char* spec_type;         
    geniex_Path spec_draft_model;  
    int32_t     spec_n_max;        
    int32_t     spec_n_min;        
    float       spec_p_min;        
    geniex_PowerMode power_mode;
} geniex_ModelConfig;
typedef struct {
    geniex_Path        model_path;     
    geniex_Path        tokenizer_path; 
    geniex_ModelConfig config;         
    geniex_PluginId    plugin_id;      
    const char*        device_id;      
} geniex_LlmCreateInput;
typedef struct {
    const char* role;    
    const char* content; 
    geniex_ToolCall* tool_calls;      
    int32_t          tool_call_count; 
    const char*      tool_call_id;    
    const char*      tool_name;       
} geniex_LlmChatMessage;
typedef struct {
    geniex_LlmChatMessage* messages;              
    int32_t                message_count;         
    const char*            tools;                 
    bool                   enable_thinking;       
    bool                   add_generation_prompt; 
} geniex_LlmApplyChatTemplateInput;
typedef struct {
    char* formatted_text; 
} geniex_LlmApplyChatTemplateOutput;
typedef struct {
    const char*                    prompt_utf8; 
    const geniex_GenerationConfig* config;      
    geniex_token_callback          on_token;    
    void*                          user_data;   
    const int32_t* input_ids;       
    int32_t        input_ids_count; 
    const float* input_embd;       
    int32_t      input_embd_count; 
    int32_t      input_embd_dim;   
} geniex_LlmGenerateInput;
typedef struct {
    char*              full_text;    
    geniex_ProfileData profile_data; 
} geniex_LlmGenerateOutput;
typedef struct {
    int32_t vocab_size; 
    int32_t bos_token;  
    int32_t add_bos;    
    int32_t embd_dim;   
} geniex_LlmModelInfo;
typedef struct {
    const int32_t* input_ids;       
    int32_t        input_ids_count; 
    bool           all_positions;   
    int32_t        top_n;           
} geniex_LlmForwardLogitsInput;
typedef struct {
    float*   logits;     
    int32_t* token_ids;  
    int32_t  n_rows;     
    int32_t  row_width;  
    int32_t  vocab_size; 
} geniex_LlmForwardLogitsOutput;
typedef struct {
    const char* type;  
    const char* text;  
} geniex_VlmContent;
typedef struct {
    const char*        role;           
    geniex_VlmContent* contents;       
    int64_t            content_count;  
    geniex_ToolCall* tool_calls;       
    int32_t          tool_call_count;  
    const char*      tool_call_id;     
    const char*      tool_name;        
} geniex_VlmChatMessage;
typedef struct {
    geniex_Path        model_path;     
    geniex_Path        mmproj_path;    
    geniex_ModelConfig config;         
    geniex_PluginId    plugin_id;      
    const char*        device_id;      
    const char*        vit_device_id;  
    geniex_Path        tokenizer_path; 
} geniex_VlmCreateInput;
typedef struct {
    geniex_VlmChatMessage* messages;        
    int32_t                message_count;   
    const char*            tools;           
    bool                   enable_thinking; 
    bool grounding; 
} geniex_VlmApplyChatTemplateInput;
typedef struct {
    char* formatted_text; 
} geniex_VlmApplyChatTemplateOutput;
typedef struct {
    bool supports_vision; 
    bool supports_audio;  
} geniex_VlmCapabilities;
typedef struct {
    const char*                    prompt_utf8; 
    const geniex_GenerationConfig* config;      
    geniex_token_callback          on_token;    
    void*                          user_data;   
} geniex_VlmGenerateInput;
typedef struct {
    char*              full_text;    
    geniex_ProfileData profile_data; 
} geniex_VlmGenerateOutput;