sdk/model-manager/include/geniex_model.h


typedef enum {
    GENIEX_MODEL_TYPE_LLM = 0,
    GENIEX_MODEL_TYPE_VLM = 1,
} geniex_ModelType;
typedef struct {
    char*            model_path;     
    char*            mmproj_path;    
    char*            tokenizer_path; 
    char*            model_dir;      
    char*            model_name;     
    char*            plugin_id;      
    geniex_ModelType model_type;     
} geniex_ModelPaths;
typedef struct {
    char*            name;       
    char*            model_name; 
    char*            plugin_id;  
    geniex_ModelType model_type;
    int64_t          total_size;      
    char**           precisions;      
    int32_t          precision_count; 
} geniex_ModelDetail;
typedef struct {
    geniex_ModelDetail* models;
    int32_t             count;
} geniex_ModelListDetailedOutput;
typedef enum {
    GENIEX_HUB_AUTO        = 0, 
    GENIEX_HUB_HUGGINGFACE = 1, 
    GENIEX_HUB_MODELSCOPE  = 2, 
    GENIEX_HUB_AIHUB       = 3, 
    GENIEX_HUB_VOLCES      = 4, 
    GENIEX_HUB_DOCKER = 5,
    GENIEX_HUB_LOCALFS = 127,
} geniex_HubSource;
typedef struct {
    const char* file_name; 
    int64_t     downloaded_bytes;
    int64_t     total_bytes; 
} geniex_FileProgress;
typedef bool (*geniex_download_progress_cb)(const geniex_FileProgress* files, int32_t file_count, void* user_data);
typedef struct {
    uint32_t    struct_size;
    const char* model_name; 
    const char*      quant;
    geniex_HubSource hub;        
    geniex_Path      local_path; 
    const char* hf_token;
    const char* chipset;
    const char*                 display_name;
    geniex_download_progress_cb on_progress; 
    void*                       user_data;   
    int32_t model_type;
} geniex_ModelPullInput;
typedef struct {
    char*   quant; 
    int64_t size;  
} geniex_QuantCandidate;